--- a/css/gatito.css
+++ b/css/gatito.css
@@ -15,3 +15,14 @@ body{
     grid-template-rows: repeat(3,100px);
     gap: 5px;
 }
+.cell{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    background-color: white;
+    border: 1px solid #333;
+    cursor: pointer;
+}
